# DjangoBackend

./: .env.example  .gitignore  pyproject.toml  requirements.txt
core/: settings.py  urls.py
user/: models.py  urls.py  views.py
users/: models.py
